Better items layout.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
             <div class="exit" data-what="listView">
                 <span class="bigIcon">❌</span>
             </div>
-            <div id="listItems">
-                <span class="midIcon">🧮</span>
-                <span class="midIcon">🛒</span>
-                <span class="midIcon">🍩</span>
-                <span class="midIcon">⛑️</span>
+            <div class="list" id="listItems">
             </div>
             <div class="nah" id="info">
                 <div id="info-top"></div>
@@ -31,7 +27,7 @@
             </div>
         </div>
     </div>
-    <div id="footer">~ 2022 by KM ~</div>
+    <div id="footer">~ v1.0-w58 | 2022 by KM ~</div>
 	<script src="./js/index.js"></script>
   </body>
 </html>
